--- a/frontend/src/styles/car-listing.css
+++ b/frontend/src/styles/car-listing.css
@@ -1,6 +1,6 @@
 /* CSS Variables for Consistent Theming */
 :root {
-  --primary-color: #4e73df;
+  --primary-color: #005566;
   --secondary-color: #74788d;
   --success-color: #34c38f;
   --background-color: #f8f9fc;
