--- a/frontend/src/styles/footer.css
+++ b/frontend/src/styles/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background: #000d6b;
+  background: #005566;
   padding-top: 50px;
   padding-bottom: 15px;
 }
@@ -52,12 +52,12 @@
   padding: 8px 12px;
   border: 1px solid #7c8a972f;
   border-radius: 50px;
-  background: #020a4de9;
+  background: #fff;
 }
 
 .newsletter input {
   background: transparent;
-  color: #fff;
+  color: #000;
   border: none;
   outline: none;
 }
@@ -89,6 +89,4 @@
   .footer__bottom p {
     font-size: 0.7rem;
   }
-
-  
 }
